Product API design #1
