# src/api/product/presentation/products.controller.ts
@@ -1,42 +1,88 @@
 import { TypedQuery } from '@COMMON/decorator/http';
 import { PaginatedResponse } from '@INTERFACE/common';
-import { ProductSchema } from '@INTERFACE/product';
-import { TypedParam } from '@nestia/core';
-import { Controller, Get, Post } from '@nestjs/common';
+import { IProductUsecase, ProductSchema } from '@INTERFACE/product';
+import { TypedBody, TypedParam } from '@nestia/core';
+import { Controller, Get, Patch, Post, Delete } from '@nestjs/common';
 
 @Controller('products')
 export class ProductsController {
+  constructor(private readonly productUsecase: IProductUsecase) {}
+
   /**
-   * 상품 목록 요청 API
+   * 상품 목록 조회 API
+   *
+   * 전체 상품 목록 조회
+   *
+   * 추후에 쿼리를 통해 가게별, 카테고리별 등의 필터링 기준 추가
+   *
+   * 추후에 쿼리를 통해 가격 낮은 순/높은 순, 인기 순 등의 정렬 기준 추가
+   *
    * @tag product
    * @param page query로 전달된 페이지 정보, default 1
    * @returns 페이지 정보와 함께 요청한 상품 목록
    */
   @Get()
-  getProductList(
+  getList(
     @TypedQuery('page', { type: 'number', optional: true }) page?: number,
   ): Promise<PaginatedResponse<ProductSchema.General>> {
-    console.log(page ?? 1);
-    throw Error();
+    return this.productUsecase.findMany(page);
   }
   /**
-   * 상품 상세 정보 요청 API
+   * 상품 상세 조회 API
+   *
    * @tag product
+   * @param product_id 상품 id
+   * @returns 상품 상세 정보
    */
   @Get(':product_id')
-  getProduct(
+  get(
     @TypedParam('product_id', 'uuid') product_id: string,
   ): Promise<ProductSchema.Detail> {
-    throw Error();
+    return this.productUsecase.findOne(product_id);
   }
 
   /**
-   * 상품 정보 생성 API
+   * 상품 생성 요청 API
+   *
+   * body에 포함된 store_id에 해당하는 가게에 등록된 사용자만 요청할 수 있다.
+   *
    * @tag product
+   * @param body 상품 생성 정보
    * @returns 생성된 상품 정보
    */
   @Post()
-  createProduct(): Promise<ProductSchema.Detail> {
-    throw Error();
+  create(
+    @TypedBody() body: IProductUsecase.CreateData,
+  ): Promise<ProductSchema.Detail> {
+    return this.productUsecase.create(body);
+  }
+
+  /**
+   * 상품 수정 요청 API
+   *
+   * @tag product
+   * @param product_id 변경할 상품 id
+   * @param body 변경된 상품 정보
+   * @returns 변경된 상품의 상세 정보
+   */
+  @Patch(':product_id')
+  update(
+    @TypedParam('product_id', 'uuid') product_id: string,
+    @TypedBody() body: IProductUsecase.UpdateData,
+  ): Promise<ProductSchema.Detail> {
+    return this.productUsecase.update(product_id, body);
+  }
+
+  /**
+   * 상품 삭제(비활성화) 요청 API
+   *
+   * @tag product
+   * @param product_id 삭제 대상 상품의 id
+   */
+  @Delete(':product_id')
+  inActivate(
+    @TypedParam('product_id', 'uuid') product_id: string,
+  ): Promise<void> {
+    return this.productUsecase.inActivate(product_id);
   }
 }
